--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/clinic?useSSL=false
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/clinic
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.main.allow-circular-references=true
-server.port=8090
 
